[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-utils"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
gh-utils = "gh_utils.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
